external-crates/move/crates/move-compiler/tests/move_check/parser/constant_type_annotation_invalid.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/constant_type_annotation_invalid.move:2:25
  │
2 │     const EThreadMaxxed = 1;
  │                         ^ Expected a type annotation for this constant, e.g. 'EThreadMaxxed: <type>'

